Version 6.45 - 27 February 2012

- urpmi:
  o downgrade from rpm-4.9 to 4.8 db when installing mga1 in a chroot from
    mga2+ (mga#4590)
  o fix urpmi failing silently and with exit status 0 when package
    installation fails due to either conflicts (mdv#63072) or to
    unselecting package (mdv#63940)
  o kill unused DUDF support (mga#4493)
  o return the proper error code in some cases when failing to install some
    packages
  o --test: do not display "More information on package"
  o --test: do not update /var/lib/rpm/installed-through-deps.list
- urpmi.addmedia:
  o fix $ARCH and $VERSION keyword substition in media URL
- urpmq:
  o non-zero exit code if .rpm file was not found (POK, mdv#64969)

Version 6.44 - 07 February 2012

- fix package count when using -a and when some packages exist in several
  repositories (eg: noarch packages) (mga#4322)
- translation updates

Version 6.43.1 - 23 January 2012

- do not test urpm::dudf
- kill a minor GC cycle

Version 6.43 - 6 January 2012

- urpmf, urpmq:
  o fix using xml info files with quotes in medium name
- urpmi
  o do not compute orphan packages when handling priority upgrades
  o disable dudf support (we've nothing server side)
  o fix checking available space of mount point (mga#1342)
  o fix reading unrequested packages list when chrooted
  o fix already installed noarch packages are listed twice on x86_64 (mga#4038)

Version 6.42 - 05 November 2011

- urpmi.addmedia:
  o do not pick rsync medium if rsync is not installed (mga#3557)
- urpmi.update:
  o document that -a only works on enabled media (mga#3190)

Version 6.41 - 14 October 2011

- add infrastructure for rpmdrake (#920)
- add infrastructure so that GUIes can offer not to ask anymore about missing
  or bad packages
- fix broken 'urpmi --no-md5sum' (pok, mga#62557)
- use rsync to download from rsync-mirrors (Alexander Barakin, mga#2518)

Version 6.40 - 07 May 2011

- compress sources with xz instead of bzip2