@@ -1,3 +1,5 @@
+- warn if --allow-force, --allow-nodeps, --force or --keep is in use (mga#3127)
+
 Version 6.45 - 27 February 2012
 
 - urpmi:
